src/objects/Episys_User__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Branch__c</fullName>
        <label>Assigned Branch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <formula>Text(Assigned_Branch__c) &amp; &apos; &apos; &amp; 
CASE(Assigned_Branch__c, 
96, &apos;Direct Lending&apos;, 
200, &apos;Spectrum&apos;, 
270, &apos;Spectrum&apos;, 
299, &apos;Spectrum&apos;, 
99, &apos;ATM&apos;, 
24, &apos;Bakersfield&apos;, 
05, &apos;Brea&apos;, 
20, &apos;Camino Media&apos;, 
02, &apos;Concord&apos;, 
09, &apos;El Segundo&apos;, 
206, &apos;Pleasant Hill&apos;, 
21, &apos;Kern River/ China Grade&apos;, 
04, &apos;Richmond&apos;, 
03, &apos;San Ramon&apos;, 
201, &apos;Spectrum San Francisco&apos;, 
29, &apos;Denver&apos;, 
06, &apos;Covington&apos;, 
203, &apos;Spectrum Frederick Bechtel&apos;, 
23, &apos;Pascagoula&apos;, 
19, &apos;Aramco&apos;, 
17, &apos;Bellaire&apos;, 
14, &apos;1600 Smith&apos;, 
208, &apos;El Paso&apos;, 
25, &apos;Post Oak&apos;, 
202, &apos;Spectrum Houston Galleria&apos;, 
207, &apos;Bountiful&apos;, 
28, &apos;Salt Lake City Refinery&apos;, 
205, &apos;Spectrum Reston&apos;, 
01, &apos;San Francisco&apos;, 
22, &apos;West Loop&apos;, 
53, &apos;Electronic&apos;, 
55, &apos;Inactive, Low Balance, No Loans*&apos;, 
56, &apos;Inactive, Low Balance, Chargeoffs&apos;, 
57, &apos;Inactive, Low Balance, Bad Address&apos;, 
88, &apos;Operation Services&apos;, 
93, &apos;Member Services&apos;, 
98, &apos;Remote Access&apos;, 
204, &apos;Spectrum Westridge Mall&apos;, 
253, &apos;Spectrum Electronic&apos;, 
255, &apos;Spectrum Inactive, Low Balance, No Loans*&apos;, 
256, &apos;Spectrum Inactive, Low Balance, Chargeoffs&apos;, 
257, &apos;Spectrum Inactive, Low Balance, Bad Address&apos;, 
293, &apos;Spectrum Member Services Branch&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <formula>IF(Default__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Episys_ID__c</fullName>
        <externalId>true</externalId>
        <label>Episys ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Episys_Name__c</fullName>
        <label>Episys Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Episys User</label>
    <listViews>
        <fullName>All_Epysis_Users</fullName>
        <columns>Episys_ID__c</columns>
        <columns>Episys_Name__c</columns>
        <columns>Alias__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Assigned_Branch__c</columns>
        <columns>Default__c</columns>
        <columns>DefaultValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Epysis Users</label>
    </listViews>
    <listViews>
        <fullName>Valid_Alias</fullName>
        <columns>Episys_ID__c</columns>
        <columns>Default__c</columns>
        <columns>Episys_Name__c</columns>
        <columns>Assigned_Branch__c</columns>
        <columns>Alias__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alias__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Valid Alias</label>
    </listViews>
    <nameField>
        <displayFormat>EU-{0000}</displayFormat>
        <label>Episys User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Episys Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>